unpackaged/main/default/objects/Bank_Account__c/Bank_Account__c.object-meta.xml
<CustomObject>
    <label>Bank Account</label>
    <nameField>
        <displayFormat>BA-{00000000}</displayFormat>
        <label>Bank Account ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>