unpackaged/main/default/objects/Bank_Account__c/fields/Account_Label__c.field-meta.xml
<CustomField>
    <fullName>Account_Label__c</fullName>
    <label>Account Label</label>
    <length>50</length>
    <type>Text</type>
</CustomField>