unpackaged/main/default/objects/Bank_Account__c/fields/Account_Short_Label__c.field-meta.xml
<CustomField>
    <fullName>Account_Short_Label__c</fullName>
    <label>Account Short Label</label>
    <length>10</length>
    <type>Text</type>
</CustomField>