unpackaged/main/default/objects/Bank_Account__c/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <description>This is the bank account type.  0 = Checking, 1 = Savings.  Currently only Checking is supported.</description>
    <inlineHelpText>This is the bank account type.  0 = Checking, 1 = Savings.  Currently only Checking is supported.</inlineHelpText>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>0</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>