unpackaged/main/default/objects/Bank_Account__c/fields/AccountNo__c.field-meta.xml
<CustomField>
    <fullName>AccountNo__c</fullName>
    <label>Account #</label>
    <length>17</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>