unpackaged/main/default/objects/Bank_Account__c/fields/APM_URL_ID__c.field-meta.xml
<CustomField>
    <fullName>APM_URL_ID__c</fullName>
    <label>APM URL ID</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>