unpackaged/main/default/objects/Bank_Account__c/fields/Authorization_Type__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Type__c</fullName>
    <formula>&quot;PPD Written&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Authorization Type</label>
    <type>Text</type>
</CustomField>