unpackaged/main/default/objects/Bank_Account__c/fields/Bank_Account_Add_On_Batch__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Add_On_Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank Account Add-On Batch</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Add_On_Batch__c.ValuePlus__c</field>
            <operation>equals</operation>
            <valueField>$Source.ValuePlus__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Add_On_Batch__c</referenceTo>
    <relationshipLabel>Bank Accounts</relationshipLabel>
    <relationshipName>Bank_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>