unpackaged/main/default/objects/Bank_Account__c/fields/Bank_Account_Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Verification_Status__c</fullName>
    <description>This status specifies the GIACT Bank Account Verification Status.</description>
    <label>Bank Account Verification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Failed-Error</fullName>
            </value>
            <value>
                <fullName>Failed-PrivateBadChecksList</fullName>
            </value>
            <value>
                <fullName>Failed-Declined</fullName>
            </value>
            <value>
                <fullName>Failed-RejectItem</fullName>
            </value>
            <value>
                <fullName>Failed-AcceptWithRisk</fullName>
            </value>
            <value>
                <fullName>Failed-RiskAlert</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Success-No Demand Deposit Account</fullName>
            </value>
            <value>
                <fullName>Failed-NegativeData</fullName>
            </value>
            <value>
                <fullName>Failed-NoData</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>