unpackaged/main/default/objects/Bank_Account__c/fields/Bank_Street__c.field-meta.xml
<CustomField>
    <fullName>Bank_Street__c</fullName>
    <label>Bank Street</label>
    <length>100</length>
    <type>Text</type>
</CustomField>