unpackaged/main/default/objects/Bank_Account__c/fields/Bank_Zip__c.field-meta.xml
<CustomField>
    <fullName>Bank_Zip__c</fullName>
    <label>Bank Zip</label>
    <length>5</length>
    <type>Text</type>
</CustomField>