unpackaged/main/default/objects/Bank_Account__c/fields/BankCityStateZip__c.field-meta.xml
<CustomField>
    <fullName>BankCityStateZip__c</fullName>
    <formula>Bank_City__c &amp; &quot;, &quot; &amp;  TEXT(Bank_State__c) &amp; &quot; &quot; &amp;  Bank_Zip__c</formula>
    <label>BankCityStateZip</label>
    <type>Text</type>
</CustomField>