unpackaged/main/default/objects/Bank_Account__c/fields/Belongs_to_Batch__c.field-meta.xml
<CustomField>
    <fullName>Belongs_to_Batch__c</fullName>
    <description>Determines of this bank account is part of</description>
    <formula>NOT(
  AND(
    ISNULL(Bank_Account_Add_On_Batch__c),
    NOT(ISPICKVAL(Bank_Account_Add_On_Batch__r.Stage__c,&#39;Ready for Profitstars&#39;))
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Belongs to Batch</label>
    <type>Checkbox</type>
</CustomField>