unpackaged/main/default/objects/Bank_Account__c/fields/Business_Personal__c.field-meta.xml
<CustomField>
    <fullName>Business_Personal__c</fullName>
    <description>R164047</description>
    <label>Business/Personal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business</fullName>
                <default>true</default>
                <label>Business</label>
            </value>
            <value>
                <fullName>Personal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>