unpackaged/main/default/objects/Bank_Account__c/fields/CustomerAuthenticationStatus__c.field-meta.xml
<CustomField>
    <fullName>CustomerAuthenticationStatus__c</fullName>
    <label>Customer Authentication Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success-Pass</fullName>
            </value>
            <value>
                <fullName>Failed-AcceptWithRisk</fullName>
            </value>
            <value>
                <fullName>Failed-RiskAlert</fullName>
            </value>
            <value>
                <fullName>Failed-Declined</fullName>
            </value>
            <value>
                <fullName>No-Information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>