unpackaged/main/default/objects/Bank_Account__c/fields/CustomerDetail__c.field-meta.xml
<CustomField>
    <fullName>CustomerDetail__c</fullName>
    <label>Customer Detail</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>First Owner</fullName>
            </value>
            <value>
                <fullName>Second Owner</fullName>
            </value>
            <value>
                <fullName>Third Owner</fullName>
            </value>
            <value>
                <fullName>Fourth Owner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>