unpackaged/main/default/objects/Bank_Account__c/fields/Cybersource_ID__c.field-meta.xml
<CustomField>
    <fullName>Cybersource_ID__c</fullName>
    <label>Cybersource ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>