unpackaged/main/default/objects/Bank_Account__c/fields/CybersourceUpdateDate__c.field-meta.xml
<CustomField>
    <fullName>CybersourceUpdateDate__c</fullName>
    <label>Cybersource Update Date</label>
    <type>Date</type>
</CustomField>