unpackaged/main/default/objects/Bank_Account__c/fields/CybersourceUpdateStatus__c.field-meta.xml
<CustomField>
    <fullName>CybersourceUpdateStatus__c</fullName>
    <label>Cybersource Update Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ready To Transmit</fullName>
            </value>
            <value>
                <fullName>Transmitted</fullName>
            </value>
            <value>
                <fullName>Needs Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>