unpackaged/main/default/objects/Bank_Account__c/fields/GiactRequestVersion__c.field-meta.xml
<CustomField>
    <fullName>GiactRequestVersion__c</fullName>
    <label>GiactRequestVersion</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>