unpackaged/main/default/objects/Bank_Account__c/fields/GiactStatus__c.field-meta.xml
<CustomField>
    <fullName>GiactStatus__c</fullName>
    <label>Giact Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ready to Transmit to GIACT</fullName>
            </value>
            <value>
                <fullName>Successfully Validated</fullName>
            </value>
            <value>
                <fullName>Needs Review</fullName>
            </value>
            <value>
                <fullName>Manually Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>