unpackaged/main/default/objects/Bank_Account__c/fields/Legacy_CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>Legacy_CreatedDate__c</fullName>
    <label>Legacy CreatedDate</label>
    <type>DateTime</type>
</CustomField>