unpackaged/main/default/objects/Bank_Account__c/fields/LID__c.field-meta.xml
<CustomField>
    <fullName>LID__c</fullName>
    <label>LID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>