unpackaged/main/default/objects/Bank_Account__c/fields/Location_Add_Status__c.field-meta.xml
<CustomField>
    <fullName>Location_Add_Status__c</fullName>
    <inlineHelpText>Submitted - ProfitStars is processing the request
Approved - ProfitStars approved the request and provided LID
Completed - LID updated to APM</inlineHelpText>
    <label>Location Add Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>