unpackaged/main/default/objects/Bank_Account__c/fields/location_number__c.field-meta.xml
<CustomField>
    <fullName>location_number__c</fullName>
    <displayFormat>{00000000}</displayFormat>
    <label>location number</label>
    <type>AutoNumber</type>
</CustomField>