unpackaged/main/default/objects/Bank_Account__c/fields/MyCase_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>MyCase_Account_Type__c</fullName>
    <label>MyCase Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Operating</fullName>
            </value>
            <value>
                <fullName>Trust</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>