unpackaged/main/default/objects/Bank_Account__c/fields/MyCase_URL_ID__c.field-meta.xml
<CustomField>
    <fullName>MyCase_URL_ID__c</fullName>
    <label>MyCase URL ID</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>