unpackaged/main/default/objects/Bank_Account__c/fields/Outbound_LID__c.field-meta.xml
<CustomField>
    <fullName>Outbound_LID__c</fullName>
    <description>Created by R163828</description>
    <label>Outbound LID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>