unpackaged/main/default/objects/Bank_Account__c/fields/Outbound_Location_Update_Status__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Location_Update_Status__c</fullName>
    <label>Outbound Location Update Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ready To Update</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>