unpackaged/main/default/objects/Bank_Account__c/fields/PayNearMeBankAccountStatus__c.field-meta.xml
<CustomField>
    <fullName>PayNearMeBankAccountStatus__c</fullName>
    <description>used in the pay near me integration</description>
    <label>Pay Near Me Bank Account Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ready to Transmit</fullName>
            </value>
            <value>
                <fullName>Transmitted</fullName>
            </value>
            <value>
                <fullName>Needs Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>