unpackaged/main/default/objects/Bank_Account__c/fields/PayNearMeSettlementID__c.field-meta.xml
<CustomField>
    <fullName>PayNearMeSettlementID__c</fullName>
    <description>used in the pay near me integration</description>
    <label>Pay Near Me Settlement ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>