unpackaged/main/default/objects/Bank_Account__c/fields/PayNearMeSiteID__c.field-meta.xml
<CustomField>
    <fullName>PayNearMeSiteID__c</fullName>
    <formula>ValuePlus__r.PayNearMeSiteID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pay Near Me Site ID</label>
    <type>Text</type>
</CustomField>