unpackaged/main/default/objects/Bank_Account__c/fields/PayNearMeSiteSecret__c.field-meta.xml
<CustomField>
    <fullName>PayNearMeSiteSecret__c</fullName>
    <description>Stores the value of the site Secret key for creating settlements in Pay Near Me</description>
    <formula>ValuePlus__r.PayNearMeSiteSecret__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pay Near Me Site Secret</label>
    <type>Text</type>
</CustomField>