unpackaged/main/default/objects/Bank_Account__c/fields/PayNearMeUpdateDate__c.field-meta.xml
<CustomField>
    <fullName>PayNearMeUpdateDate__c</fullName>
    <description>used in the pay near me integration</description>
    <label>Pay Near Me Update Date</label>
    <type>DateTime</type>
</CustomField>