unpackaged/main/default/objects/Bank_Account__c/fields/PNMClone__c.field-meta.xml
<CustomField>
    <fullName>PNMClone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PNM Clone</label>
    <type>Checkbox</type>
</CustomField>