unpackaged/main/default/objects/Bank_Account__c/fields/Profit_Stars_Index__c.field-meta.xml
<CustomField>
    <fullName>Profit_Stars_Index__c</fullName>
    <description>Index used during profit stars to distinguish one bank account from another.</description>
    <label>Profit Stars Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>