unpackaged/main/default/objects/Bank_Account__c/fields/ps_BankAccountUpdateRequired__c.field-meta.xml
<CustomField>
    <fullName>ps_BankAccountUpdateRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bank Account Update Required</label>
    <type>Checkbox</type>
</CustomField>