unpackaged/main/default/objects/Bank_Account__c/fields/ps_LocationUpdateRequired__c.field-meta.xml
<CustomField>
    <fullName>ps_LocationUpdateRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Location Update Required</label>
    <type>Checkbox</type>
</CustomField>