unpackaged/main/default/objects/Bank_Account__c/fields/Ready_for_APM__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_APM__c</fullName>
    <formula>ISPICKVAL(Status__c , &#39;Active&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ready for APM</label>
    <type>Checkbox</type>
</CustomField>