unpackaged/main/default/objects/Bank_Account__c/fields/Ready_for_push_to_ProfitStars__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_push_to_ProfitStars__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready for push to ProfitStars</label>
    <type>Checkbox</type>
</CustomField>