unpackaged/main/default/objects/Bank_Account__c/fields/Request_Reason__c.field-meta.xml
<CustomField>
    <fullName>Request_Reason__c</fullName>
    <description>Specify the reason for this Bank Account or Location request.</description>
    <label>Request Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Changed banks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>