unpackaged/main/default/objects/Bank_Account__c/fields/Return_Account_Add_Status__c.field-meta.xml
<CustomField>
    <fullName>Return_Account_Add_Status__c</fullName>
    <description>Created for R1915805</description>
    <label>Return Account Add Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>