unpackaged/main/default/objects/Bank_Account__c/fields/Return_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Return_Account_Number__c</fullName>
    <description>Created for R1915805</description>
    <label>Return Account Number</label>
    <length>17</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>