unpackaged/main/default/objects/Bank_Account__c/fields/Return_Routing_Number__c.field-meta.xml
<CustomField>
    <fullName>Return_Routing_Number__c</fullName>
    <description>Created for R1915805</description>
    <label>Return Routing Number</label>
    <length>9</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>