unpackaged/main/default/objects/Bank_Account__c/fields/RoutingNo__c.field-meta.xml
<CustomField>
    <fullName>RoutingNo__c</fullName>
    <label>Routing #</label>
    <length>9</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>