unpackaged/main/default/objects/Bank_Account__c/fields/Send_to_PS_as_BankName__c.field-meta.xml
<CustomField>
    <fullName>Send_to_PS_as_BankName__c</fullName>
    <formula>if(( ValuePlus__r.ProfitStars_Bulk_Enroll__c ),  OID__c ,  Account_Label__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Send to PS as BankName</label>
    <type>Text</type>
</CustomField>