unpackaged/main/default/objects/Bank_Account__c/fields/SF_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>SF_Account_ID__c</fullName>
    <formula>CASESAFEID( ValuePlus__r.Account__r.Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SF Account ID</label>
    <type>Text</type>
</CustomField>