unpackaged/main/default/objects/Bank_Account__c/fields/tempFK__c.field-meta.xml
<CustomField>
    <fullName>tempFK__c</fullName>
    <externalId>true</externalId>
    <label>tempFK</label>
    <length>255</length>
    <type>Text</type>
</CustomField>