unpackaged/main/default/objects/Bank_Account__c/fields/ValuePlus__c.field-meta.xml
<CustomField>
    <fullName>ValuePlus__c</fullName>
    <label>Value+</label>
    <referenceTo>ValuePlus__c</referenceTo>
    <relationshipLabel>Bank Accounts</relationshipLabel>
    <relationshipName>Bank_Accounts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>