unpackaged/main/default/objects/Bank_Account__c/fields/Vantiv_Bank_Account_Onboarding_Status__c.field-meta.xml
<CustomField>
    <fullName>Vantiv_Bank_Account_Onboarding_Status__c</fullName>
    <label>Vantiv Bank Account Onboarding Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ready To Transmit</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Manual Review</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>