unpackaged/main/default/objects/Bank_Account__c/fields/Vantiv_Merchant_Ident_String__c.field-meta.xml
<CustomField>
    <fullName>Vantiv_Merchant_Ident_String__c</fullName>
    <label>Vantiv Merchant Ident String</label>
    <length>250</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>