unpackaged/main/default/objects/Bank_Account__c/fields/Vantiv_PayPage_Id__c.field-meta.xml
<CustomField>
    <fullName>Vantiv_PayPage_Id__c</fullName>
    <label>Vantiv PayPage Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>