unpackaged/main/default/objects/Bank_Account__c/fields/Vantiv_Sub_Merchant_Id__c.field-meta.xml
<CustomField>
    <fullName>Vantiv_Sub_Merchant_Id__c</fullName>
    <label>Vantiv Sub Merchant Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>