unpackaged/main/default/objects/Bank_Account__c/validationRules/MyCase_Account_Type_Required_for_MyCase.validationRule-meta.xml
<ValidationRule>
    <fullName>MyCase_Account_Type_Required_for_MyCase</fullName>
    <active>true</active>
    <description>R152575</description>
    <errorConditionFormula>OR($User.ProfileId = &#39;00e8W0000022jgiQAA&#39;,
$User.ProfileId = &#39;00e8W0000022jh7QAA&#39;,
$User.ProfileId = &#39;00e8W000000bRIbQAM&#39;)
&amp;&amp; ISBLANK(TEXT( MyCase_Account_Type__c ))</errorConditionFormula>
    <errorDisplayField>MyCase_Account_Type__c</errorDisplayField>
    <errorMessage>Please input a MyCase Account Type</errorMessage>
</ValidationRule>