unpackaged/main/default/objects/Bank_Account__c/validationRules/Require_Account_Label.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Account_Label</fullName>
    <active>true</active>
    <description>Created by R152149</description>
    <errorConditionFormula>((ISNEW() &amp;&amp; ISBLANK( Account_Label__c )) || (ISCHANGED( Account_Label__c ) &amp;&amp; ISBLANK( Account_Label__c ))) &amp;&amp; NOT($Profile.Name == &quot;System Administrator&quot;)</errorConditionFormula>
    <errorDisplayField>Account_Label__c</errorDisplayField>
    <errorMessage>An Account Label is required on all Bank Accounts.</errorMessage>
</ValidationRule>