unpackaged/main/default/objects/Bank_Account__c/validationRules/Valid_Account_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Account_Number</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(Regex(AccountNo__c, &quot;^[0-9]{4,17}$&quot;))</errorConditionFormula>
    <errorDisplayField>AccountNo__c</errorDisplayField>
    <errorMessage>Please enter a valid account number.</errorMessage>
</ValidationRule>