unpackaged/main/default/objects/Bank_Account__c/validationRules/Valid_Return_Account_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Return_Account_Number</fullName>
    <active>true</active>
    <description>Please enter a valid Return Account number; Created for R1915805</description>
    <errorConditionFormula>Return_Account_Number__c!=&quot;&quot;&amp;&amp;
Return_Account_Number__c!=NULL&amp;&amp;
NOT(Regex(Return_Account_Number__c, &quot;^[0-9]{4,17}$&quot;))</errorConditionFormula>
    <errorDisplayField>Return_Account_Number__c</errorDisplayField>
    <errorMessage>Please enter a valid Return Account number.</errorMessage>
</ValidationRule>