unpackaged/main/default/objects/Bank_Account__c/validationRules/Valid_Return_Routing_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Return_Routing_Number</fullName>
    <active>true</active>
    <description>Please enter a valid Return Routing number; Created for R1915805</description>
    <errorConditionFormula>Return_Routing_Number__c!=&quot;&quot;&amp;&amp;
Return_Routing_Number__c!=NULL&amp;&amp;
NOT(Regex(Return_Routing_Number__c, &quot;^[0-9]{9}$&quot;))</errorConditionFormula>
    <errorDisplayField>Return_Routing_Number__c</errorDisplayField>
    <errorMessage>Please enter a valid Return Routing number.</errorMessage>
</ValidationRule>