unpackaged/main/default/objects/Bank_Account__c/validationRules/Valid_Routing_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Routing_Number</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(Regex(RoutingNo__c, &quot;^[0-9]{9}$&quot;))</errorConditionFormula>
    <errorDisplayField>RoutingNo__c</errorDisplayField>
    <errorMessage>Please enter a valid routing number.</errorMessage>
</ValidationRule>